// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maps dispatch to props 1`] = `
Object {
  "onAction": [Function],
}
`;

exports[`maps state to props 1`] = `
Object {
  "loading": false,
  "quizTitle": "Sample Quiz",
  "ui": Immutable.List [
    Immutable.Map {
        type: "media",
        image: "https://www.dbc.dk/logo.png",
    },
    Immutable.Map {
        type: "text",
        text: "
                Introtekst om quizzen, ...
        
                Her er mere beskrivelse
                ",
    },
    Immutable.Map {
        type: "button",
        text: "Start",
        action: Immutable.Map {
            screen: "question1",
        },
    },
],
  "vars": Immutable.Map {
},
}
`;

exports[`renders 1`] = `
<div
  className="MuiGrid-container-1 MuiGrid-spacing-xs-16-24"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41"
  >
    <header
      className="MuiPaper-root-106 MuiPaper-elevation4-112 MuiAppBar-root-98 MuiAppBar-positionStatic-102 MuiAppBar-colorDefault-103"
    >
      <div
        className="MuiToolbar-root-133 MuiToolbar-regular-135 MuiToolbar-gutters-134"
      >
        <h2
          className="MuiTypography-root-137 MuiTypography-title-143 MuiTypography-colorInherit-156"
        >
          Titel for Quiz
        </h2>
      </div>
    </header>
  </div>
</div>
`;

exports[`renders page 1`] = `
<div
  className="MuiGrid-container-1 MuiGrid-spacing-xs-16-24"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41"
  >
    <header
      className="MuiPaper-root-106 MuiPaper-elevation4-112 MuiAppBar-root-98 MuiAppBar-positionStatic-102 MuiAppBar-colorDefault-103"
    >
      <div
        className="MuiToolbar-root-133 MuiToolbar-regular-135 MuiToolbar-gutters-134"
      >
        <h2
          className="MuiTypography-root-137 MuiTypography-title-143 MuiTypography-colorInherit-156"
        >
          Titel for Quiz
        </h2>
      </div>
    </header>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41"
  >
    hello
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41"
  >
    <div
      className="MuiGrid-container-1 MuiGrid-spacing-xs-16-24"
    >
      <div
        className="MuiGrid-item-2 MuiGrid-grid-xs-6-35"
      >
        <button
          className="MuiButtonBase-root-188 MuiButton-root-162 MuiButton-contained-173 MuiButton-raised-176 MuiButton-fullWidth-187"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-163"
          >
            but
          </span>
          <span
            className="MuiTouchRipple-root-191"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41"
  />
</div>
`;
